--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,11 @@ install:
 #  - rvm install ruby-2.3.1
 #  - gem install pronto-credo
 
+cache:
+  directories:
+    - deps
+    - _build
+
 script:
 #  — if [ $PULL_REQUEST_ID != false ]; then pronto run -f github_pr; fi
   - mix test
