--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,13 +7,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "cytoscape": "^2.7.26",
     "phoenix": "file:../../deps/phoenix",
-    "phoenix_html": "file:../../deps/phoenix_html",
-    "cytoscape": "~2.7.14"
+    "phoenix_html": "file:../../deps/phoenix_html"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
-    "brunch": "2.7.4",
+    "brunch": "^2.7.4",
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
