--- a/thg-web-secret.yaml
+++ b/thg-web-secret.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: thg-secret
+  name: thg-web
 # The API keys must be encoded to base64, e.g: `echo -n "APIKEY"|base64`
 data:
   phoenix_secret: YOUR_PHOENIX_SECRET
