API client fetches url from window object

--- a/thg-web-secret.yaml
+++ b/thg-web-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 metadata:
   name: thg-web
 # The API keys must be encoded to base64, e.g: `echo -n "APIKEY"|base64`
+# remember to decode when passing to the API client libraries
 data:
   phoenix_secret: YOUR_PHOENIX_SECRET
   twitter_consumer_key: YOUR_TWITTER_CONSUMER_KEY
