--- a/thg-web-deploy.yaml
+++ b/thg-web-deploy.yaml
@@ -13,37 +13,36 @@ spec:
     spec:
       containers:
       - name: thg-web-container
-        image: gcr.io/trendinghashtaggraph-189213/thg:v1
+        image: robinsalehjan/thg:v1
+        imagePullPolicy: Always
+        env:
+          - name: REPLACE_OS_VARS
+            value: 'true'
+          - name: PHOENIX_SECRET_KEY_BASE
+            valueFrom:
+              secretKeyRef:
+                name: thg-web-secret
+                key: phoenix_secret
+          - name: TWITTER_CONSUMER_KEY
+            valueFrom:
+              secretKeyRef:
+                name: thg-web-secret
+                key: twitter_consumer_key
+          - name: TWITTER_CONSUMER_SECRET
+            valueFrom:
+              secretKeyRef:
+                name: thg-web-secret
+                key: twitter_consumer_secret
+          - name: TWITTER_ACCESS_TOKEN
+            valueFrom:
+              secretKeyRef:
+                name: thg-web-secret
+                key: twitter_access_token
+          - name: TWITTER_ACCESS_TOKEN_SECRET
+            valueFrom:
+              secretKeyRef:
+                name: thg-web-secret
+                key: twitter_access_token_secret
         ports:
           - name: http
             containerPort: 8080
-        env:
-        - name: PORT
-          value: "8080"
-        - name: REPLACE_OS_VARS
-          value: "true"
-        - name: PHOENIX_SECRET_KEY_BASE
-          valueFrom:
-            secretKeyRef:
-              name: thg-web-secret
-              key: phoenix_secret
-        - name: TWITTER_CONSUMER_KEY
-          valueFrom:
-            secretKeyRef:
-              name: thg-web-secret
-              key: twitter_consumer_key
-        - name: TWITTER_CONSUMER_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: thg-web-secret
-              key: twitter_consumer_secret
-        - name: TWITTER_ACCESS_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: thg-web-secret
-              key: twitter_access_token
-        - name: TWITTER_ACCESS_TOKEN_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: thg-web-secret
-              key: twitter_access_token_secret
