--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "cytoscape": "^2.7.26",
-    "phoenix": "file:../../deps/phoenix",
-    "phoenix_html": "file:../../deps/phoenix_html"
+    "phoenix": "^1.5.4",
+    "phoenix_html": "^2.14.2"
   },
   "devDependencies": {
-    "babel-brunch": "~6.0.0",
-    "brunch": "^2.7.4",
-    "clean-css-brunch": "~2.0.0",
+    "babel-brunch": "^7.0.1",
+    "brunch": "^3.0.0",
+    "clean-css-brunch": "^3.0.0",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
     "uglify-js-brunch": "~2.0.1"
